--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -1206,6 +1206,7 @@ input {
 
 .session-member-item {
   cursor: pointer;
+  flex-shrink: 0;
   font-family: $session-font-default;
   padding: 0px $session-margin-sm;
   height: 50px;
