feat: ask user for opengroup pruning on/off

--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -551,7 +551,9 @@ label {
 
   &-main-message {
     font-size: $session-font-md;
+    line-height: 1.5;
   }
+
   &-sub-message {
     text-align: center;
     margin-top: 20px;
