--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -280,8 +280,7 @@ textarea {
   font-size: $session-font-md;
 
   &-text {
-    @include session-color-subtle(var(--color-text));
-
+    color: var(--color-text-subtle);
     font-weight: 400;
     font-size: $session-font-sm;
     line-height: $session-font-sm;
@@ -883,14 +882,9 @@ label {
       font-size: $session-font-sm;
       font-weight: 100;
       max-width: 700px;
-      @include session-color-subtle(var(--color-text));
+      color: var(--color-text-subtle);
     }
 
-    &__content {
-      label {
-        @include session-color-subtle(var(--color-text));
-      }
-    }
     &__selection {
       .session-toggle {
         transition: $session-transition-duration;
@@ -978,58 +972,8 @@ label {
   border-radius: 3px;
 }
 
-.seed-dialog {
-  &__description {
-    max-width: $session-modal-size-lg;
-  }
-}
-
 .messages li {
   transition: $session-transition-duration !important;
-}
-
-.session-radio-group fieldset {
-  border: none;
-  margin-inline-start: $session-margin-sm;
-  margin-top: $session-margin-sm;
-}
-
-.session-radio-group fieldset {
-  input[type='radio'] {
-    opacity: 0;
-    position: absolute;
-    cursor: pointer;
-  }
-
-  label {
-    margin-inline-end: 1em;
-    cursor: pointer;
-  }
-
-  label:before {
-    content: '';
-    display: inline-block;
-    width: 0.5em;
-    height: 0.5em;
-    margin-inline-end: 0.8em;
-    border-radius: 100%;
-    vertical-align: 0px;
-    border: 2px solid rgba($session-color-white, 0.6);
-    padding: 0.2em;
-    background: none;
-    border-color: var(--color-accent);
-
-    background-clip: content-box;
-    transition: $session-transition-duration;
-  }
-
-  input:hover + label:before {
-    background: var(--color-accent);
-  }
-
-  input:checked + label:before {
-    background: var(--color-accent);
-  }
 }
 
 .session-id-editable {
@@ -1132,17 +1076,6 @@ input {
   }
 }
 
-.session-nickname-wrapper {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  display: flex;
-
-  .session-modal {
-    margin: auto auto;
-  }
-}
-
 .messages-container {
   .session-icon-button {
     display: flex;
@@ -1168,26 +1101,10 @@ input {
 }
 
 .group-member-list {
-  &__container {
-    padding: 2px 0px;
-    width: 100%;
-    max-height: 400px;
-    overflow-y: auto;
-    border: var(--border-session);
-  }
-
   &__selection {
     height: 100%;
     display: flex;
     flex-direction: column;
-  }
-
-  &__no-contacts {
-    font-family: $session-font-mono;
-    background: var(--color-cell-background);
-
-    text-align: center;
-    padding: 20px;
   }
 }
 
