--- a/stylesheets/_session_signin.scss
+++ b/stylesheets/_session_signin.scss
@@ -152,8 +152,8 @@
 
   &-terms-conditions-agreement {
     padding-top: $session-margin-md;
-    @include session-color-subtle(var(--color-text));
 
+    color: var(--color-text-subtle);
     text-align: center;
     font-size: 12px;
 
@@ -161,12 +161,12 @@
       white-space: nowrap;
       font-weight: bold;
       text-decoration: none;
-      @include session-color-subtle(var(--color-text));
 
+      color: var(--color-text-subtle);
       transition: $session-transition-duration;
 
       &:visited &:link {
-        @include session-color-subtle(var(--color-text));
+        color: var(--color-text-subtle);
       }
 
       &:hover {
@@ -178,8 +178,8 @@
   session-description-long {
     padding-top: 0;
     padding-bottom: 20px;
-    @include session-color-subtle(var(--color-text));
 
+    color: var(--color-text-subtle);
     text-align: center;
     font-size: 12px;
     line-height: 20px;
@@ -206,8 +206,7 @@
       border: none;
       background: transparent;
       color: var(--color-text);
-
-      font-size: 15px;
+      font-size: var(--font-size-md);
       line-height: 18px;
       text-align: center;
       overflow-wrap: break-word;
@@ -223,7 +222,7 @@
 
 [contenteditable='true']:empty::before {
   content: attr(placeholder);
-  @include session-color-subtle(var(--color-text));
 
-  font-size: 13px;
+  color: var(--color-text-subtle);
+  font-size: var(--font-size-sm);
 }
