feat: start of settings screen redesign

--- a/stylesheets/_session_group_panel.scss
+++ b/stylesheets/_session_group_panel.scss
@@ -9,7 +9,7 @@
   align-items: center;
 
   &-header {
-    margin-top: $session-margin-lg;
+    margin-top: var(--margins-lg);
     margin-inline-start: $session-margin-sm;
     margin-inline-end: $session-margin-sm;
     width: -webkit-fill-available;
