fix: batch rename margins to their var equivalent
Some of those are used in calculus and cannot be renamed

--- a/stylesheets/_avatar.scss
+++ b/stylesheets/_avatar.scss
@@ -91,7 +91,7 @@ $borderAvatarColor: unquote(
 }
 
 .module-avatar-clickable {
-  transition: $session-transition-duration;
+  transition: var(--default-duration);
   cursor: pointer;
   &:hover {
     filter: grayscale(0.7);
