--- a/stylesheets/_session_password.scss
+++ b/stylesheets/_session_password.scss
@@ -33,13 +33,13 @@
     &-error-section {
       width: 100%;
       color: $session-color-white;
-      margin: -$session-margin-sm 0px 2 * $session-margin-lg 0px;
+      margin: -var(--margins-sm) 0px 2 * $session-margin-lg 0px;
 
       .session-label {
         &.primary {
           background-color: rgba($session-color-primary, 0.3);
         }
-        padding: $session-margin-xs $session-margin-sm;
+        padding: var(--margins-xs) var(--margins-sm);
         text-align: center;
       }
     }
@@ -70,13 +70,13 @@
           color: $session-color-white;
         }
         svg {
-          margin-inline-end: $session-margin-lg;
+          margin-inline-end: var(--margins-lg);
         }
       }
 
       p,
       input {
-        margin: $session-margin-lg 0px;
+        margin: var(--margins-lg) 0px;
       }
 
       .button-group {
@@ -88,7 +88,7 @@
         color: #fff;
         background-color: #2e2e2e;
         margin-top: 2 * $session-margin-lg;
-        padding: $session-margin-xs $session-margin-lg;
+        padding: var(--margins-xs) var(--margins-lg);
         outline: none;
         border: none;
         border-radius: 2px;
