--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -269,7 +269,7 @@ textarea {
 
 /* CONVERSATION AND MESSAGES */
 .module-conversation-header {
-  height: $main-view-header-height;
+  height: var(--main-view-header-height);
 }
 
 .module-conversation-header__title-flex,
@@ -563,37 +563,9 @@ label {
 }
 
 .session-toggle {
-  width: 51px;
-  height: 31px;
-  border: 1.5px solid #e5e5ea;
-  border-radius: 16px;
-  position: relative;
-
-  cursor: pointer;
-  background-color: rgba(0, 0, 0, 0);
-
-  .knob {
-    position: absolute;
-    top: 0.5px;
-    left: 0.5px;
-    height: 27px;
-    width: 27px;
-    border-radius: 28px;
-    background-color: $session-color-white;
-    box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.05), 0 3px 1px 0 rgba(0, 0, 0, 0.05),
-      0 2px 2px 0 rgba(0, 0, 0, 0.1), 0 3px 3px 0 rgba(0, 0, 0, 0.05);
-
-    transition: transform var(--default-duration) ease,
-      background-color var(--default-duration) ease;
-  }
-
   &.active {
     background-color: $session-color-green;
     border-color: $session-color-green;
-
-    .knob {
-      transform: translateX(20px);
-    }
   }
 }
 
@@ -830,92 +802,12 @@ label {
     overflow-x: hidden;
   }
 
-  &-header {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    height: $main-view-header-height;
-    background: var(--color-cell-background);
-
-    &-title {
-      line-height: $main-view-header-height;
-      font-weight: bold;
-      font-size: var(--font-size-lg);
-      text-align: center;
-      flex-grow: 1;
-    }
-
-    .session-button,
-    .session-icon-button {
-      margin-inline-end: var(--margins-lg);
-    }
-  }
-
-  &-item {
-    font-size: $session-font-md;
-    padding: var(--margins-lg);
-    margin-bottom: 20px;
-
-    background: var(--color-cell-background);
-    color: var(--color-text);
-    border-bottom: var(--border-session);
-
-    &.inline {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
-
-    &__info {
-      padding-inline-end: var(--margins-lg);
-    }
-
-    &__title {
-      line-height: 1.7;
-      font-size: var(--font-size-lg);
-      font-weight: bold;
-    }
-
-    &__description {
-      font-family: $session-font-default;
-      font-size: $session-font-sm;
-      font-weight: 100;
-      max-width: 700px;
-      color: var(--color-text-subtle);
-    }
-
-    &__selection {
-      .session-toggle {
-        transition: var(--default-duration);
-      }
-    }
-  }
-
   &-view {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     overflow: hidden;
-  }
-
-  &__version-info {
-    display: flex;
-    justify-content: space-between;
-
-    padding: var(--margins-sm) var(--margins-md);
-    background: none;
-    font-size: $session-font-xs;
-
-    span {
-      opacity: 0.4;
-      transition: var(--default-duration);
-
-      &:hover {
-        opacity: 1;
-      }
-    }
   }
 
   &__password-lock {
@@ -938,27 +830,6 @@ label {
 
       border: 1px solid $session-shade-8;
       border-radius: 5px;
-
-      h3 {
-        padding: 0px;
-        margin-bottom: var(--margins-lg);
-      }
-
-      input {
-        width: 100%;
-        background: var(--color-input-background);
-        color: var(--color-text);
-
-        padding: var(--margins-xs) var(--margins-md);
-        margin-bottom: var(--margins-lg);
-        outline: none;
-        border: none;
-        border-radius: 2px;
-        text-align: center;
-        font-size: 24px;
-        letter-spacing: 5px;
-        font-family: $session-font-default;
-      }
     }
   }
 }
