--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -615,7 +615,7 @@
   align-items: center;
   flex-grow: 1;
   font-size: 28px;
-  color: $color-light-45;
+  color: var(--color-light-gray-color);
 }
 
 // Module: Conversation List Item
