reafctors: converted sass colors in _index.scss
removed unused colors and classes

--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -800,7 +800,7 @@
 }
 
 .module-image__border-overlay--dark {
-  background-color: $color-black-02;
+  background-color: var(--color-light-black-color);
 }
 
 .module-image__loading-placeholder {
