reafctors: converted sass colors in _mentions.scss
updated session green to use css variable everywhere adn removed unused classes

--- a/stylesheets/_mentions.scss
+++ b/stylesheets/_mentions.scss
@@ -26,5 +26,5 @@
 }
 
 .module-conversation-list-item--mentioned-us {
-  border-left: 4px solid $session-color-green !important;
+  border-left: 4px solid var(--color-session-green-color) !important;
 }
