--- a/stylesheets/_session_password.scss
+++ b/stylesheets/_session_password.scss
@@ -32,7 +32,7 @@
 
     &-error-section {
       width: 100%;
-      color: $session-color-white;
+      color: white;
       margin: -var(--margins-sm) 0px 2 * $session-margin-lg 0px;
 
       .session-label {
@@ -46,7 +46,7 @@
 
     &-container {
       font-family: $session-font-default;
-      color: $session-color-white;
+      color: white;
       display: inline-flex;
       flex-direction: column;
       align-items: center;
@@ -67,7 +67,7 @@
         align-items: center;
 
         h1 {
-          color: $session-color-white;
+          color: white;
         }
         svg {
           margin-inline-end: var(--margins-lg);
