--- a/stylesheets/_modal.scss
+++ b/stylesheets/_modal.scss
@@ -14,7 +14,7 @@
     max-width: 350px;
     margin: 100px auto;
     padding: 1em;
-    background-color: $color-white;
+    background-color: white;
     border-radius: $border-radius;
     overflow: auto;
     box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.2);
@@ -134,7 +134,7 @@
     border: 0;
     outline: none;
     border-radius: 4px;
-    background-color: $color-loki-light-gray;
+    background-color: var(--color-lighter-gray-color);
 
     &:focus {
       outline: none;
@@ -191,7 +191,7 @@
       height: 30px;
       width: 30px;
       border-radius: 50%;
-      background-color: $session-color-white;
+      background-color: white;
       transition: var(--default-duration);
 
       &:hover {
