--- a/stylesheets/_quote.scss
+++ b/stylesheets/_quote.scss
@@ -107,7 +107,7 @@
   font-size: var(--font-size-sm);
   line-height: 18px;
   font-weight: 300;
-  color: $color-gray-90;
+  color: var(--color-darker-gray-color);
   margin-bottom: 5px;
 
   overflow-x: hidden;
@@ -137,7 +137,7 @@
 
 .module-quote__primary__type-label {
   font-style: italic;
-  color: $color-gray-90;
+  color: var(--color-darker-gray-color);
   font-size: var(--font-size-sm);
   line-height: 18px;
 }
@@ -199,7 +199,7 @@
   height: 32px;
   width: 32px;
   border-radius: 50%;
-  background-color: $color-white;
+  background-color: var(--color-white-color);
 }
 
 .module-quote__icon-container__icon {
@@ -242,7 +242,7 @@
   &-file__text {
     font-size: 14px;
     line-height: 18px;
-    color: $color-gray-90;
+    color: var(--color-darker-gray-color);
 
     max-width: calc(100% - 26px);
     overflow-x: hidden;
@@ -272,7 +272,7 @@
 
   &-warning__text {
     margin-inline-start: 6px;
-    color: $color-gray-90;
+    color: var(--color-darker-gray-color);
     font-size: var(--font-size-sm);
     line-height: 18px;
   }
