--- a/stylesheets/_variables.scss
+++ b/stylesheets/_variables.scss
@@ -5,25 +5,23 @@ $color-loki-green: #3bd110;
 $color-loki-green-dark: #32b10e;
 $color-loki-green-gradient: linear-gradient(to right, rgb(120, 190, 32) 0%, rgb(0, 133, 34) 100%);
 
-$color-white: #ffffff;
 $color-gray-05: #eeefef;
 $color-gray-25: #bbbdbe;
 $color-gray-45: #898a8c;
 $color-gray-60: #6b6d70;
 $color-gray-75: #3d3e44;
-$color-gray-90: #17191d;
 $color-gray-95: #0f1012;
 $color-black: #000000;
 
-$color-white-015: rgba($color-white, 0.15);
-$color-white-02: rgba($color-white, 0.2);
-$color-white-04: rgba($color-white, 0.4);
-$color-white-05: rgba($color-white, 0.5);
-$color-white-06: rgba($color-white, 0.6);
-$color-white-07: rgba($color-white, 0.7);
-$color-white-075: rgba($color-white, 0.75);
-$color-white-08: rgba($color-white, 0.8);
-$color-white-085: rgba($color-white, 0.85);
+$color-white-015: rgba(var(--color-white-color), 0.15);
+$color-white-02: rgba(var(--color-white-color), 0.2);
+$color-white-04: rgba(var(--color-white-color), 0.4);
+$color-white-05: rgba(var(--color-white-color), 0.5);
+$color-white-06: rgba(var(--color-white-color), 0.6);
+$color-white-07: rgba(var(--color-white-color), 0.7);
+$color-white-075: rgba(var(--color-white-color), 0.75);
+$color-white-08: rgba(var(--color-white-color), 0.8);
+$color-white-085: rgba(var(--color-white-color), 0.85);
 $color-light-02: #f9fafa;
 $color-light-10: #eeefef;
 $color-light-20: #c1c5cd;
@@ -44,7 +42,6 @@ $color-black-005: rgba($color-black, 0.05);
 $color-black-008-no-tranparency: #ededed;
 $color-black-016-no-tranparency: #d9d9d9;
 $color-black-012: rgba($color-black, 0.12);
-$color-black-015: rgba($color-black, 0.15);
 $color-black-04: rgba($color-black, 0.4);
 $color-black-06: rgba($color-black, 0.6);
 
