--- a/stylesheets/_rtl.scss
+++ b/stylesheets/_rtl.scss
@@ -6,8 +6,7 @@ body.rtl {
   .group-settings-item,
   .contact-selection-list,
   .group-member-list__selection,
-  .react-contexify__item,
-  .session-settings-list {
+  .react-contexify__item {
     direction: rtl;
   }
 
